[tool.poetry]
name = "etl-demo"
version = "0.1.0"
description = ""
authors = ["Andres Rengifo <amrengifoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
